--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,3 +19,6 @@ numpy==1.24.3
 duckduckgo-search>=6.0.0
 chromadb==0.4.24
 sentence-transformers>=2.2.0
+trafilatura>=1.6.0
+httpx>=0.25.0
+google-search-results>=2.4.0
