--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
         "lodash": "^4.17.21",
         "lucide-react": "^0.469.0",
         "next": "^14.2.25",
+        "next-auth": "^4.24.5",
         "radix-ui": "^1.4.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
