feat: prioritize Gemini, fix reindexing and WebSocket race condition
- Set Gemini as default model for AI tasks (notes, chat, catch-up) in frontend and backend
- Prioritize Gemini in model selection UI
- Fix 'reindex-all' endpoint:
    - Update DB queries to use 'transcript_segments' instead of legacy 'transcripts'
    - Switch vector store to PostgreSQL (pgvector) with 'asyncpg'
    - Fix binary encoding issue for vectors using string casting
- Fix WebSocket 'Recording Stopped' race condition using connection reference counting
- Update backend requirements and Docker config for Postgres/Neon support

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - PYTHONUNBUFFERED=1
       - PYTHONPATH=/app
       - DATABASE_PATH=/app/data/meeting_minutes.db
+      - DATABASE_URL=postgresql://neondb_owner:npg_3JYK7ySezjrT@ep-morning-truth-ahrz730e-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
       - OLLAMA_HOST=${OLLAMA_HOST:-http://host.docker.internal:11434}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - GROQ_API_KEY=${GROQ_API_KEY}
@@ -90,6 +91,7 @@ services:
       - PYTHONUNBUFFERED=1
       - PYTHONPATH=/app
       - DATABASE_PATH=/app/data/meeting_minutes.db
+      - DATABASE_URL=postgresql://neondb_owner:npg_3JYK7ySezjrT@ep-morning-truth-ahrz730e-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require
       - OLLAMA_HOST=${OLLAMA_HOST:-http://host.docker.internal:11434}
 
     # Add extra host for Docker Desktop compatibility
