--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -17,7 +17,6 @@ indic-transliteration==2.3.75
 
 numpy==1.24.3
 duckduckgo-search>=6.0.0
-chromadb==0.4.24
 sentence-transformers>=2.2.0
 trafilatura>=1.6.0
 httpx>=0.25.0
@@ -26,3 +25,5 @@ python-jose[cryptography]>=3.3.0
 torch
 torchaudio
 ten-vad
+asyncpg==0.29.0
+psycopg2-binary==2.9.9
